coffeeshop-core - spring-core-master - Updated changes with multi machines

--- a/coffeeshop-core/src/main/resources/application.properties
+++ b/coffeeshop-core/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+coffeeshop.inventory.beans.limit=10
+coffeeshop.inventory.milk.limit=10
+coffeeshop.inventory.machines.limit=4
+coffeeshop.customer.limit=4
+coffeeshop.step.processing=10
+coffeeshop.jitter=0
+coffeeshop.debug.enabled=true
+coffeeshop.abc=10
