coffeeshop-core - spring-core-master - Replaced sysouts with Loggers

--- a/coffeeshop-core/src/main/resources/application.properties
+++ b/coffeeshop-core/src/main/resources/application.properties
@@ -6,3 +6,5 @@ coffeeshop.step.processing=10
 coffeeshop.jitter=0
 coffeeshop.debug.enabled=true
 coffeeshop.abc=10
+
+logging.level.com.simulation.shop=INFO
