--- a/coffeeshop-core/src/main/resources/application.properties
+++ b/coffeeshop-core/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 coffeeshop.inventory.beans.limit=10
 coffeeshop.inventory.milk.limit=10
-coffeeshop.inventory.machines.limit=4
 coffeeshop.customer.limit=4
+coffeeshop.machine.limit=4
 coffeeshop.step.processing=10
 coffeeshop.jitter=0
 coffeeshop.debug.enabled=true
-coffeeshop.abc=10
 
 logging.level.com.simulation.shop=INFO
