coffeeshop-api - spring-rest-master - Code structuring for Rest, Added Swagger

--- a/coffeeshop-api/src/main/resources/application.properties
+++ b/coffeeshop-api/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+coffeeshop.inventory.beans.limit=10
+coffeeshop.inventory.milk.limit=10
+coffeeshop.customer.limit=4
+coffeeshop.machine.limit=4
+coffeeshop.step.processing=10
+coffeeshop.jitter=0
+coffeeshop.debug.enabled=true
 
+logging.level.com.simulation.shop=INFO
+
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#enabling the H2 console
+spring.h2.console.enabled=true
