coffeeshop-api - spring-rest-master - Changes to use starters grindermachine, espressomachine, steamermachine

--- a/coffeeshop-api/src/main/resources/application.properties
+++ b/coffeeshop-api/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #enabling the H2 console
 spring.h2.console.enabled=true
+
+#machine
+machine.grinder.limit=4
+machine.espresso.limit=4
+machine.steamer.limit=4
