--- a/coffeeshop-api/pom.xml
+++ b/coffeeshop-api/pom.xml
@@ -46,6 +46,30 @@
         </dependency>
 
         <dependency>
+            <groupId>com.coffee.shop</groupId>
+            <artifactId>grinder-machine</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.coffee.shop</groupId>
+            <artifactId>espresso-machine</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.coffee.shop</groupId>
+            <artifactId>steamer-machine</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.coffee.shop</groupId>
+            <artifactId>coffee-shared</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
