--- a/coffeeshop-dashboard-ui/.prettierrc
+++ b/coffeeshop-dashboard-ui/.prettierrc
@@ -1,8 +1,7 @@
 {
   "trailingComma": "es5",
-  "printWidth": 100,
+  "printWidth": 80,
   "semi": false,
   "singleQuote": true,
-  "tabWidth": 2,
-  "max-len": 80
+  "tabWidth": 2
 }
