--- a/coffeeshop-api/src/main/resources/application.properties
+++ b/coffeeshop-api/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.h2.console.enabled=true
 machine.grinder.limit=4
 machine.espresso.limit=4
 machine.steamer.limit=4
+
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=OPTIONS, GET, POST
+management.endpoints.web.cors.allowed-headers=*
