--- a/coffeeshop-dashboard-ui/package.json
+++ b/coffeeshop-dashboard-ui/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,7 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.14",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
