--- a/coffeeshop-api/src/main/resources/application.properties
+++ b/coffeeshop-api/src/main/resources/application.properties
@@ -24,3 +24,5 @@ machine.steamer.limit=4
 management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-methods=OPTIONS, GET, POST
 management.endpoints.web.cors.allowed-headers=*
+
+management.endpoints.web.exposure.include=*
