coffeeshop-api - spring-rest-master - Changed endpoint to use proxy and updated cors origin

--- a/coffeeshop-api/src/main/resources/application.properties
+++ b/coffeeshop-api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path=/coffeeshop-api
+
 coffeeshop.inventory.beans.limit=1000
 coffeeshop.inventory.milk.limit=1000
 coffeeshop.customer.limit=4
