--- a/coffeeshop-dashboard-ui/package.json
+++ b/coffeeshop-dashboard-ui/package.json
@@ -2,6 +2,7 @@
   "name": "coffeeshop-dashboard-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/coffeeshop-dashboard-ui",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -20,6 +21,8 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^18.2.0",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
     "typescript": "^4.8.2",
